[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scene/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Art/tile_0171.png" type="Texture" id=2]
[ext_resource path="res://Script/Player2.gd" type="Script" id=3]
[ext_resource path="res://Script/Game.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 50, 2 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 2, 75 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 100, 2 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 2, 30 )

[node name="Game" type="Node"]
script = ExtResource( 4 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 50, 125 )

[node name="Player2" parent="." instance=ExtResource( 1 )]
position = Vector2( 150, 125 )
script = ExtResource( 3 )

[node name="Sprite" parent="Player2" index="0"]
texture = ExtResource( 2 )

[node name="GroundP1" type="StaticBody2D" parent="."]
position = Vector2( 100, 150 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="GroundP1"]
position = Vector2( -50, 0 )
shape = SubResource( 2 )

[node name="GroundP2" type="StaticBody2D" parent="."]
position = Vector2( 100, 150 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="GroundP2"]
position = Vector2( 50, 0 )
shape = SubResource( 2 )

[node name="Wall" type="StaticBody2D" parent="."]
position = Vector2( 0, 75 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall"]
shape = SubResource( 3 )

[node name="Wall2" type="StaticBody2D" parent="."]
position = Vector2( 200, 75 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall2"]
shape = SubResource( 3 )

[node name="Ceil" type="StaticBody2D" parent="."]
position = Vector2( 100, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ceil"]
shape = SubResource( 4 )

[node name="StaticBody2D3" type="StaticBody2D" parent="."]
position = Vector2( 100, 150 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D3"]
position = Vector2( 0, -30 )
shape = SubResource( 5 )

[node name="ScoreP1" type="Label" parent="."]
margin_left = 50.0
margin_top = 25.0
margin_right = 90.0
margin_bottom = 39.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreP2" type="Label" parent="."]
margin_left = 150.0
margin_top = 25.0
margin_right = 190.0
margin_bottom = 39.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelTimer" type="Label" parent="."]
margin_left = 95.0
margin_top = 75.0
margin_right = 135.0
margin_bottom = 89.0
text = "3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 100, 75 )
current = true
zoom = Vector2( 0.25, 0.25 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="Player2"]
